[package]
name = "logform"
version = "0.1.2"
edition = "2021"
description = "logform for rust"
license = "MIT"
documentation = "https://docs.rs/logform"
repository = "https://github.com/ifeanyi-ugwu/logform_rs"
authors = ["ifeanyi ugwu"]
keywords = ["winston", "logging", "format"]
categories = ["development-tools::debugging"]

[dependencies]
chrono = "0.4.38"
serde_json = "1.0.125"
