[package]
name = "logform"
version = "0.1.3"
edition = "2021"
description = "logform for rust"
license = "MIT"
documentation = "https://docs.rs/logform"
repository = "https://github.com/ifeanyi-ugwu/logform_rs"
authors = ["ifeanyi ugwu"]
keywords = ["winston", "logging", "format"]
categories = ["development-tools::debugging"]

[dependencies]
chrono = "0.4.38"
colored = "2.1.0"
lazy_static = "1.5.0"
regex = "1.10.6"
serde_json = "1.0.125"
